--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-   /* Vars */
+
+/* Vars */
 :root {
   --main-font: 'Roboto', sans-serif;
   --secondary-font: 'Raleway', sans-serif;
@@ -18,7 +19,7 @@
   --white: #ffffff;
   --accent: #2196f3;
   --secondary-text-color: #757575;
-  --social-links: #AFB1B8;
+  --social-links: #afb1b8;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
   line-height: 1.72;
   letter-spacing: 0.03em;
 }
+
 .container {
   width: 1200px;
   padding: 0 15px 0 15px;
@@ -36,75 +38,71 @@ body {
   margin-right: auto;
 }
 
- h1,
- h2,
- h3,
- p,
- ul {
- margin-top: 0;
- margin-bottom: 0;
- padding: 0;
- }
+h1,
+h2,
+h3,
+p,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+}
 
- ul {
+ul {
   list-style: none;
   padding-left: 0;
   margin: 0;
 }
 
- .section {
+.section {
   padding: 94px 0;
-  
-  }
+}
 
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 /* HEADER */
 .menu-header {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
   padding-top: 24px;
   padding-bottom: 25px;
-  }
+}
 
 .header-group,
-.contact-item  {
- color: var(--secondary-text-color);
- font-weight: 500;
- line-height: 1.14;
- letter-spacing: 0.02em;
- display: flex;
- align-items: center;
+.contact-item {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
 }
- .main-nav{
- display: flex;
- align-items: center;
- margin-right: auto;
- margin-left: 0;
- }
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  margin-left: 0;
+}
 
 .header-container {
   display: flex;
   align-items: center;
 }
 
-.header-link, 
-.header-item 
-{
+.header-link,
+.header-item {
   display: block;
   align-items: center;
-  }
+}
 
-.header-group, 
-.contact-item
-{
+.header-group,
+.contact-item {
   margin-right: 0;
- }
-
-
+}
 
 /* Navigation */
 .main-logo {
@@ -115,20 +113,21 @@ body {
   font-weight: 700;
   display: block;
   align-items: center;
- }
- 
+}
+
 .main-logo-text {
   color: #000000;
 }
+
 .main-nav-items {
- font-weight: 500;
- line-height: 1.14;
- letter-spacing: 0.02em;
- display: flex;
- min-width: 45px;
- margin-left: 93px;
- margin-right: auto;
- gap: 50px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  display: flex;
+  min-width: 45px;
+  margin-left: 93px;
+  margin-right: auto;
+  gap: 50px;
 }
 
 .link-nav {
@@ -136,11 +135,8 @@ body {
   color: var(--primary-color);
   display: flex;
   align-items: center;
-  gap:10px;
-  }
-
-
-
+  gap: 10px;
+}
 
 .nav-link,
 .nav-link-1 {
@@ -151,27 +147,46 @@ body {
   text-decoration: none;
 }
 
+.main-nav> .list .current {
+  color: var(--accent);
+  position: relative;
+  padding-bottom: 32px;
+}
+
+.main-nav> .list .current::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  border-radius: 2px;
+  
+}
+
 .contact-item li,
 .header-group li {
   margin-right: 50px;
 }
-
-
 
 .nav-link:hover,
 .nav-link:focus,
 .nav-link:active {
   color: var(--accent);
 }
+
 .nav-link-1:hover,
 .nav-link-1:focus,
 .nav-link-1:active {
   color: var(--accent);
 }
+
 .nav-link-1 {
   color: var(--accent);
   font-weight: 500;
 }
+
 .list,
 .nav-item,
 .contact-item,
@@ -179,18 +194,14 @@ body {
 .work-item,
 .address-item,
 .filter-item,
-.filter-item
-{
+.filter-item {
   list-style: none;
 }
-
-
 
 .link,
 .nav-link-1,
 .contact-link {
   text-decoration: none;
-  
 }
 
 .contact-link {
@@ -199,19 +210,23 @@ body {
   color: var(--secondary-text-color);
   font-weight: 500;
   text-decoration: none;
- }
+}
+
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent);
 }
+
 .link-address {
   fill: currentColor;
 }
+
 /* Hero */
 
 .hero {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  background-color: #2F303A;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero.jpg);
+  background-color: #2f303a;
   max-width: 1600px;
   background-position: center;
   background-repeat: no-repeat;
@@ -222,11 +237,8 @@ body {
   padding-bottom: 200px;
 }
 
-
-
-
 .hero-title {
- font-weight: 900;
+  font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
@@ -251,7 +263,7 @@ body {
   line-height: 1.87;
   display: flex;
   align-items: center;
-  padding: 10px 32px ;
+  padding: 10px 32px;
   min-width: 216px;
   display: block;
   margin-left: auto;
@@ -259,18 +271,60 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .module-btn-hero {
   background-color: #188ce8;
 }
- 
+
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: inherit;
+}
+
+.modal {
+  position: absolute;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+
+  min-height: 581px;
+  min-width: 528px;
+  background-color: #fff;
+}
+
+.close {
+  min-width: 30px;
+  min-height: 30px;
+  padding: 0;
+  border: none;
+  margin-top: 8px;
+  margin-right: 8px;
+  background-color: transparent;
+  background-image: url(../images/icons.svg/close.svg);
+}
+
 /* text */
 
 .skils {
-background-color: var(--white);
-padding-bottom: 0;
-
+  background-color: var(--white);
+  padding-bottom: 0;
 }
 
 .subtitle-skils {
@@ -288,16 +342,17 @@ padding-bottom: 0;
   color: var(--secondary-text-color);
   font-weight: 400;
 }
+
 .skils-list {
-display: flex;
-gap: 30px;
+  display: flex;
+  gap: 30px;
 }
 
 .skils-item {
   width: 270px;
 }
 
-.skils-icon  {
+.skils-icon {
   display: flex;
   border-radius: 4px;
 }
@@ -309,49 +364,74 @@ gap: 30px;
   justify-content: center;
   width: 270px;
   height: 120px;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   margin-bottom: 30px;
-  
-  }
+}
 
-  /* work*/
+/* work*/
 
 .work {
   background-color: var(--white);
 }
 
-.section-title{
+.section-title {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   margin-bottom: 50px;
   color: var(--primary-color);
-  
 }
 
-.work-list{
+.work-list {
   display: flex;
   gap: 30px;
 }
-.work-item{
+
+.work-item {
   width: 370px;
 }
 
-  /* teams*/
+.work-thomb {
+  position: relative;
+}
 
-.teams-items{
+.work-wrap {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.work-text{
+  position: absolute;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+
+/* teams*/
+
+.teams-items {
   display: flex;
   gap: 30px;
 }
 
-.teams-item{
+.teams-item {
   background-color: var(--white);
   width: 270 px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.card{
+.card {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -360,9 +440,7 @@ gap: 30px;
   background-color: #f5f4fa;
 }
 
-
-.title-teams
- {
+.title-teams {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -377,7 +455,7 @@ gap: 30px;
   line-height: 1.19;
   text-align: center;
   margin-bottom: 10px;
-  }
+}
 
 .teams-text {
   font-weight: 400;
@@ -386,33 +464,31 @@ gap: 30px;
   text-align: center;
   color: var(--secondary-text-color);
   margin-bottom: 16px;
-  }
+}
 
-  /* Socials */
+/* Socials */
 
-  .socials {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    }
+.socials {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
 
- .social-links {
-  
-   width: 44px;
-   height: 44px;
-   background-color: rgba(255, 255, 255, 0.1);
-   border-radius: 50%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   color: var(--social-links);
+.social-links {
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--social-links);
 }
 
 .social-links:hover,
 .social-links:focus {
- color: var(--white);
- background-color: var(--accent);
- 
+  color: var(--white);
+  background-color: var(--accent);
 }
 
 .socials-icon {
@@ -421,47 +497,35 @@ gap: 30px;
 
 /* Clients */
 
-
 .clients-list {
- display:flex;
- gap: 30px;
- 
+  display: flex;
+  gap: 30px;
 }
-
-
-
 
 .clients {
   background-color: var(--white);
 }
 
-
 .clients-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 1px #AFB1B8;
+  border: solid 1px #afb1b8;
   width: 170px;
   height: 92px;
-  fill:#AFB1B8;
+  fill: #afb1b8;
   border-radius: 4px;
-  }
-
+}
 
 .clients-link:hover,
 .clients-link:focus {
- border-color:var(--accent);
- fill: var(--accent);
+  border-color: var(--accent);
+  fill: var(--accent);
 }
-
-
-
-
-
 
 /* Filter  */
 
-.filter-item.list{
+.filter-item.list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -486,8 +550,8 @@ gap: 30px;
 }
 
 .filter-bnt-now.button.active {
-background-color: var(--accent);
-color: var(--white);
+  background-color: var(--accent);
+  color: var(--white);
 }
 
 .filter-bnt-now:hover,
@@ -513,15 +577,14 @@ color: var(--white);
   padding-top: 60px;
   padding-bottom: 60px;
 }
- 
+
 .address,
 .address-items,
-.address-link
- {
-color: var(--white);
-font-style: normal;
-font-weight: 400;
-line-height: 1.71;
+.address-link {
+  color: var(--white);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.71;
 }
 
 .main-logo-text-white {
@@ -529,23 +592,20 @@ line-height: 1.71;
 }
 
 .logo-footer {
- display: block;
- padding: 0;
- margin-bottom: 20px;
+  display: block;
+  padding: 0;
+  margin-bottom: 20px;
 }
 
 .address-link,
- .address-mail,
- .address-item1
- 
- {
+.address-mail,
+.address-item1 {
   margin-bottom: 9px;
 }
 
 .address-contact {
   font-style: normal;
   color: #ffffff99;
-   
 }
 
 .address-contact:hover,
@@ -555,13 +615,13 @@ line-height: 1.71;
 
 .address-footer {
   display: flex;
-  }
+}
 
 .footer-container {
   display: flex;
   gap: 70px;
   align-items: baseline;
-  }
+}
 
 .social-links-block {
   display: flex;
@@ -572,7 +632,7 @@ line-height: 1.71;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;    
+  text-transform: uppercase;
   color: var(--white);
   padding-bottom: 20px;
 }
@@ -581,35 +641,65 @@ line-height: 1.71;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--white);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  
-  
 }
 
 .social-links-footer {
   display: flex;
   gap: 10px;
 }
-  
 
 /* Portfolio  */
 
-.page{
+.page {
   background-color: var(--white);
   font-family: var(--main-font);
   font-size: 14px;
   letter-spacing: 0.03em;
 }
 
-.portfolio-cards{
-  background: #FFFFFF;
-  border-top: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
+.cards-thumb{
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-thumb:hover .overlay,
+.cards-thumb:focus .overlay{
+  transform: translateY(0);
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-content{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: var(--white)
+
+}
+
+.portfolio-cards {
+  background: #ffffff;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   padding: 20px 24px 20px 24px;
 }
 
-.cards-title{
+.cards-title {
   color: var(--primary-color);
   font-weight: 700;
   font-size: 18px;
@@ -626,23 +716,26 @@ line-height: 1.71;
   color: var(--secondary-text-color);
 }
 
-.cards{
+.cards {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.cards-item{
+.cards-item {
   width: 370;
-}
-.cards-item:hover,
-.cards-item:focus
-{
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
- 
-.cards-item{
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: calc((100% - 60px) / 3);
   border: 1px solid #eeeeee;
 }
 
+.cards-item:hover,
+.cards-item:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.cards-item {
+  width: calc((100% - 60px) / 3);
+  border: 1px solid #eeeeee;
+}
+ 
